# omni-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
src/computer_control/: __init__.py  __main__.py  config.py
src/computer_control/core/: __init__.py  controller.py
src/computer_control/models/: __init__.py  element_extractor.py
src/computer_control/utils/: __init__.py  vision.py
tests/: __init__.py  conftest.py  test_controller.py
